--- a/style.css
+++ b/style.css
@@ -1,5 +1,44 @@
-.continaer {
-    max-width: 1125px;
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600&family=Oswald:wght@500;700&display=swap');
+
+* {
+  margin: 0;
+  padding: 0;
+}
+
+.section-efficiency {
+  background: #FAFAFA;
+}
+  
+.container {
+  max-width: 1125px;
+  margin: 0 auto;
+}
+
+.section-efficiency .about {
+  font-family: 'Montserrat', sans-serif;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 22px;
+  color: #8870E9;
+}
+  
+.section-efficiency .subtitle-block {
+  display: flex;
+  flex-flow: row nowrap;
+}
+  
+.section-efficiency .section-subtitle {
+  font-family: 'Oswald', sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 42px;
+  line-height: 62px;
+  color: #2A2241;
+}
+  
+.section-efficiency .subtitle-ico {
+  margin-left: auto; 
 }
 
 @media all and (max-width: 1000px) {
