--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
 }
 
 .section-efficiency {
+  width: 100%;
   background: #FAFAFA;
 }
   
@@ -42,11 +43,17 @@
   margin-left: auto; 
 }
 
-.section-efficiency .section-efficiency-block {
-  max-width: 362px;
+.section-efficiency .blocks_container {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
 }
 
-.section-efficiency .block-title {
+.section-efficiency .card-big {
+  flex: 0 0 362px;
+}
+
+.section-efficiency .card-big-title {
   margin-bottom: 20px;
   font-family: 'Montserrat', sans-serif;
   font-weight: 700;
@@ -55,13 +62,55 @@
   color: #2A2241;
 }
 
-.section-efficiency .block-content {
+.section-efficiency .card-big-description {
   font-family: 'Montserrat', sans-serif;
   font-weight: 500;
   font-size: 18px;
   line-height: 27px;
   color: #797979;
 }
+
+.section-efficiency .cards_container {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
+  flex: 0 0 552px;
+
+}
+
+.section-efficiency .card {
+  flex: 0 0 267px;
+  margin-bottom: 42px;
+}
+
+.section-efficiency .card-title {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 17px;
+  color: #2A2241;
+}
+
+.section-efficiency .card-ico {
+  margin-bottom: 20px;
+}
+
+.section-efficiency .card-title {
+  margin-bottom: 20px;
+  font-family: 'Montserrat',sans-serif;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 17px;
+  color: #2A2241;
+}
+.section-efficiency .card-description {
+  font-family: 'Montserrat',sans-serif;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 18px;
+  color: #797979;
+}
+
 
 @media all and (max-width: 1000px) {
 
