--- a/style.css
+++ b/style.css
@@ -129,25 +129,59 @@ body {
     color: #FFFFFF;
 }
 
-.header .container-menu .menu-items {
+.header .container-menu .header-menu .menu-hamburger {
+    width: 24px;
+    height: 24px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    display: none;
+}
+
+.header .container-menu .header-menu .menu-hamburger .lines-wrap {
+    width: 100%;
+    height: 19px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: baseline;
+}
+
+.header .container-menu .header-menu .menu-hamburger .lines-wrap .menu-btn-line {
+    transition: 0.2s;
+    width: 100%;
+    height: 3px;
+    background: #FFFFFF;
+    border-radius: 1px;
+}
+
+.header .container-menu .header-menu .menu-list .menu-items {
     display: flex;
     flex-flow: row nowrap;
 }
 
-.header .container-menu .menu-items .menu-link {
+.header .container-menu .header-menu .menu-list .menu-items .menu-link {
     margin-right: 67px;
 }
 
-.header .container-menu .menu-items .menu-link:last-child {
+.header .container-menu .header-menu .menu-list .menu-items .menu-link:last-child {
     margin-right: 0;
 }
 
-.header .container-menu .menu-items .menu-link .link-item  {
+.header .container-menu .header-menu .menu-items .menu-link .link-item  {
     text-decoration: none;
     font-weight: bold;
     font-size: 14px;
     line-height: 150%;
     color: #FFFFFF;
+}
+
+.header .container-menu .header-menu .mobile-menu {
+    display: none;
+    width: 224;
+    height: 812px;
+    background-color: #000000;
 }
 
 .container {
@@ -217,18 +251,75 @@ body {
 
 @media all and (max-width: 1366px) {
     .header {
-        background: url(./images/header-background-media1366px.jpg) no-repeat center;
+        background: url(./images/header-background-media1366px.jpg) no-repeat top center;
     }
 
-    .container-menu {
-        max-width: 1366px;
-        margin: 0 auto;
+    .header .header-main {
+        padding: 0 694px 0 120px;
     }
-    
-    .header-main {
-        padding: 0 573px 0 120px;
-}
 
 @media all and (max-width: 1000px) {
+    .header .container-menu .header-menu {
+        padding: 24px 16px;
+    }
+    .header .container .header-main {
+        padding: 0 16px 0 16px;
+        margin: 0 auto;
+    }
 
+    .header .container-menu .header-menu .menu-hamburger {
+        display: flex;
+    }
+
+    .header .container-menu .header-menu .menu-items .menu-link {
+        display: none;
+    }
+    
+    .header-main .content-title {
+        margin-bottom: 10px;
+        font-family: 'Oswald', sans-serif;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 56px;
+        line-height: 90%;
+        color: #FFFFFF;
+    }
+    
+    .header-main .content-subtitle {
+        margin-bottom: 10px;
+        font-family: 'Oswald', sans-serif;
+        font-style: normal;
+        font-weight: 500;
+        font-size: 24px;
+        line-height: 36px;
+        color: #FFA800;
+    }
+    
+    .header-main .content-description {
+        margin-bottom: 64px ;
+        font-size: 14px;
+        line-height: 130%;
+        color: #FFFFFF;
+    }
+    
+    .header-main .content-button {
+        display: inline-block;
+        margin-bottom: 142px;
+        padding: 20px 0;
+        width: 328px;
+        height: 64px;
+        background: #6646E9;
+        border-radius: 2px;
+        text-align: center;
+    }
+    
+    .header-main .content-button .button-link {
+        text-decoration: none;
+        font-weight: bold;
+        font-size: 14px;
+        line-height: 17px;
+        text-align: center;
+        text-transform: uppercase;
+        color: #FFFFFF;
+    }
 }
