--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ body {
   padding: 16px 24px;
 }
 
-.section-efficiency .about {
+.section-efficiency .subtitle-content .about {
   font-weight: 600;
   line-height: 22px;
   color: #8870E9;
@@ -33,10 +33,12 @@ body {
 .section-efficiency .subtitle-block {
   display: flex;
   flex-flow: row nowrap;
+  justify-content: space-between;
+  align-items: flex-end;
+  margin-bottom: 70px;
 }
   
-.section-efficiency .section-subtitle {
-  margin-bottom: 70px;
+.section-efficiency .subtitle {
   font-family: 'Oswald', sans-serif;
   font-weight: 500;
   font-size: 42px;
@@ -45,7 +47,7 @@ body {
 }
   
 .section-efficiency .subtitle-ico {
-  margin-left: auto; 
+   
 }
 
 .section-efficiency .blocks-container {
@@ -56,6 +58,7 @@ body {
 
 .section-efficiency .card-big {
   flex: 0 0 362px;
+  margin-bottom: 20px;
 }
 
 .section-efficiency .card-big-title {
