--- a/style.css
+++ b/style.css
@@ -1,7 +1,13 @@
 .continaer {
     max-width: 1125px;
 }
-
 @media all and (max-width: 1000px) {
-
+}
+#image {
+position: absolute;
+width: 386px;
+height: 595px;
+left: 980px;
+top: 0px;
+background: url(image/Rectangle\ 131.jpg);
 }
