--- a/style.css
+++ b/style.css
@@ -63,13 +63,14 @@ body {
 
 .section-efficiency .card-big-title {
   margin-bottom: 20px;
+  font-size: 18px;
   font-weight: 700;
-  line-height: 22px;
+  line-height: 150%;
   color: #2A2241;
 }
 
 .section-efficiency .card-big-description {
-  line-height: 27px;
+  line-height: 150%;
   color: #797979;
 }
 
@@ -78,7 +79,6 @@ body {
   flex-flow: row wrap;
   justify-content: space-between;
   flex: 0 0 552px;
-
 }
 
 .section-efficiency .card {
@@ -128,5 +128,55 @@ body {
 
 
 @media all and (max-width: 1000px) {
+  body {
+    font-size: 14px;
+  }
+  .section-efficiency .subtitle-ico {
+    margin-bottom: 24px;
+  }
+  .section-efficiency .subtitle-content .about {
+    margin-bottom: 8px;
+    font-size: 14px;
+    line-height: 17px;
+  }
 
+  .section-efficiency .subtitle {
+    font-size: 28px;
+    line-height: 100%;
+  }
+  .section-efficiency .subtitle-block {
+    flex-flow: column-reverse nowrap;
+    align-items: center;
+    margin-bottom: 32px;
+  }
+
+  .section-efficiency .blocks-container {
+    flex-flow: column nowrap;
+    justify-content: space-between;
+  }
+  .section-efficiency .card-big {
+    flex: 0 0 auto;
+    margin-bottom: 48px;
+  }
+
+  .section-efficiency .cards-container {
+    flex-flow: column nowrap;
+    flex: 0 0 auto;
+  }
+  
+  .section-efficiency .card {
+    flex: 0 0 auto;
+    margin-bottom: 24px;
+  }
+
+  .section-efficiency .card-ico {
+    margin-bottom: 16px;
+  }
+  .section-efficiency .card-title {
+    margin-bottom: 12px;
+  }
+  .section-efficiency .section-picture {
+    background: url(./images/efficiency-@media-bg.jpg) center no-repeat;
+    background-size: cover;
+  }
 }
