--- a/style.css
+++ b/style.css
@@ -1,13 +1,69 @@
 .continaer {
     max-width: 1125px;
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700&family=Oswald:wght@500;700&display=swap');
 }
-@media all and (max-width: 1000px) {
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
-#image {
-position: absolute;
-width: 386px;
-height: 595px;
-left: 980px;
-top: 0px;
-background: url(image/Rectangle\ 131.jpg);
+body {
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: normal;
+    font-size: 18px;
+}
+/* блок простой старт */
+.continaer {
+    position: absolute;
+    left: 0%;
+    right: 0%;
+    top: 0%;
+    bottom: 0%;
+    background: #FAFAFA;
+}
+.subtitle-block {
+    position: absolute;
+    left: 0%;
+    right: 0%;
+    top: 0%;
+    bottom: 65.21%;
+}
+.subtitle-content {
+    display: flex;
+    flex-direction: column;
+    padding: 0px;
+    position: absolute;
+    width: 1125px;
+    height: 87px;
+    left: 120px;
+    top: 60px;
+}
+.start {
+    position: static;
+    left: 0%;
+    right: 0%;
+    top: 0%;
+    bottom: 71.26%;
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 22px;
+    color: #8870E9;
+}
+.step {
+    position: static;
+    left: 0%;
+    right: 0%;
+    top: 28.74%;
+    bottom: 0%;
+    font-family: Oswald;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 42px;
+    line-height: 62px;
+    display: flex;
+    align-items: center;
+    color: #2A2241;
 }
