--- a/style.css
+++ b/style.css
@@ -1,14 +1,17 @@
 .continaer {
     max-width: 1125px;
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700&family=Oswald:wght@500;700&display=swap');
 }
+
+/*Подключение шрифтов*/
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Oswald&display=swap');
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 body {
-    font-family: 'Montserrat';
+    font-family: 'Montserrat', sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 18px;
@@ -58,7 +61,7 @@ body {
     right: 0%;
     top: 28.74%;
     bottom: 0%;
-    font-family: Oswald;
+    font-family: 'Oswald', sans-serif;
     font-style: normal;
     font-weight: 500;
     font-size: 42px;
@@ -82,11 +85,26 @@ body {
     top: 34.79%;
     bottom: 10.08%;
 }
-.line1 {
+.line {
     position: absolute;
     left: 50px;
     right: 0px;
     top: 13.11%;
     bottom: 86.89%;
     border: 1px solid #8870E9;
+}
+/* 1 */
+.numeral {
+    position: absolute;
+    left: 0.83%;
+    right: 90.1%;
+    top: -1.52%;
+    bottom: 72.26%;
+    font-family: 'Montserrat', sans-serif;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 64px;
+    line-height: 150%;
+    background: #FAFAFA;
+    /*border: 1px solid #6646E9;*/
 }
